# React-FastAPI-Dashboard

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  com.fastapiapp.service.plist  docker-compose.yml  fastapiapp.service  main.py  pyproject.toml  requirements.txt
app/: app.py  main.py
app/api/: admin.py  chatbot.py  document.py  documents.py  expense.py  expenses.py  health.py  llm_configs.py  llms.py  notepad.py  notepads.py  services.py  todo.py  todos.py
app/core/: auth.py  config.py  email.py  llm_cache.py  logger.py  users.py
app/db/: async_db.py  database.py  models.py  sync_db.py
app/models/: audit_mixin.py  document.py  expense.py  llm.py  llm_config.py  notepad.py  service.py  tables.py  todo.py  uimodels.py  user.py
app/pages/: jinja_pages.py
app/schemas/: audit.py  chatbot.py  datetime_format.py  document.py  expense.py  health.py  llm_config.py  notepad.py  service.py  todo.py  user.py
app/static/: index.html  index2.html
app/static/assets/: index-2pXKAzUk.css  index-B6aV0dqI.css  index-BVJn0gTR.js  index-BwxXdiBP.js  index-CgeF1Pr9.js  index-DqTPw5XQ.css  index-ZjGsJsTD.js  (+1 more)
app/templates/: base.htm  base.html  chatbot.htm  datatable.htm  document.htm  forgot-password.htm  index.htm  login.htm  navbar.htm  navbar.html  notepad.htm  register.htm  reset-password.htm  sidebar.htm  sidebar.html  upload.htm  user-verify.htm  users.htm  webpad.htm
frontend/: .env.development  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend2/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend2/src/: index.css  main.tsx  router.tsx
scripts/: apache.conf  dashboard.service  init_db.py  seed_admin_user.py  seed_db_tables.py
tests/: test_auth.py  test_email.py  test_users.py
(+146 files in other folders)
