[project]
name = "fastapi-dashboard"
version = "1.0.0"
description = "A FastAPI based dashboard WebApp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi-mail>=1.6.1",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
